--- a/src/Main/Body/ProductList/WindowGoods/WindowGoods.css
+++ b/src/Main/Body/ProductList/WindowGoods/WindowGoods.css
@@ -178,7 +178,8 @@
         flex: 0 1 25%;
     }
     .window-item__price{
-        margin-top: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
         text-align: left;
     }
 }
